--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,30 @@ repos:
     -   id: black
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: ''  # Use the sha / tag you want to point at
+    rev: '' 
     hooks:
     -   id: mypy
+
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v3.2.0
+    hooks:
+    -   id: check-yaml
+    -   id: check-json
+    -   id: end-of-file-fixer
+    -   id: check-added-large-files
+
+
+-   repo: https://gitlab.com/pycqa/flake8
+    rev: ''  
+    hooks:
+    -   id: flake8
+
+-   repo: local
+    hooks:
+    -   id: run-tests
+        name: run tests
+        entry: pytest tests
+        language: python
+        additional_dependencies: [pre-commit, pytest, pandas]
+        always_run: true
+        pass_filenames: false
