--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,6 +22,7 @@ repos:
     -   id: check-json
     -   id: end-of-file-fixer
     -   id: check-added-large-files
+        args: ['--maxkb=10000']
 
 -   repo: local
     hooks:
